--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+.sticky-header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  
+}
+
 body {
   display: flex;
   flex-direction: column;
@@ -65,13 +72,14 @@ header {
 }
 
 main {
+  
 	max-width: 800px;
-	margin: 150px auto;
+	margin: auto;
 	padding: 20px;
 	background-color: rgba(255,255,255,0.8);
 	border-radius: 5px;
 	box-shadow: 0 0 10px rgba(0,0,0,0.1);
-  margin-top: -455px;
+ 
 }
 
 h1 {
