--- a/css/mee.css
+++ b/css/mee.css
@@ -1,6 +1,6 @@
 
 body {
-	background-image: url('your-image-file-name.jpg');
+	background-image: url('see.jpg');
 	background-size: cover;
 	background-position: center;
 }
